--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mileage_to_hourly_rate_calculator",
-  "version": "1.0.0",
-  "description": "Converts mileage rate to hourly rate for invoicing",
+  "name": "drivetime_to_hourly_rate_calculator",
+  "version": "1.1.0",
+  "description": "Converts driving time rate to hourly rate for invoicing",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
